<resources>
    <string name="app_name">Cas2Audio</string>
    <string name="btn_browse">Browse for tape image&#8230;</string>
    <string name="btn_play">PLAY</string>
    <string name="btn_stop">STOP</string>
    <string name="lbl_square">Square waveform (turbo)</string>
    <string name="lbl_mono">Mono</string>
    <string name="lbl_48kHz">48 kHz</string>
    <string name="lbl_amplitude">Amplitude:</string>
    <string name="lbl_app_title">CAS2Audio</string>
    <string name="msg_nothing_to_play">No tape image selected</string>
    <string name="msg_nothing_to_play_tit">Nothing to play</string>
    <string name="msg_unable_to_open">Unable to open the tape image</string>
    <string name="msg_unable_to_open_tit">Unable to open</string>
    <string name="msg_unable_to_process">Unable to process the tape image</string>
    <string name="msg_unable_to_process_tit">Unable to process</string>
    <string name="tit_choose_image">Choose tape image (*.cas)</string>
    <string name="btn_choose">Choose</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_proc_cancel">Tape image processing cancelled</string>
    <string name="msg_proc_cancel_tit">Cancelled</string>
    <string name="lbl_short_leader">Shorten standard leader</string>
    <string name="lbl_invert_polarity">Invert Polarity</string>
    <string name="btn_settings">Settings...</string>
    <string name="title_activity_settings">Settings</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_defaults">Defaults</string>
    <string name="btn_clear_history">Clear history</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="lbl_messages">Messages</string>
    <string name="tit_recent">Recent tape images</string>
    <string name="btn_ok">OK</string>
    <string name="msg_not_a_tape_image">The selected file is not a tape image</string>
    <string name="msg_not_a_tape_image_tit">Not a tape image</string>


</resources>
