<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/sw48kHz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lbl_48kHz" />

        <Switch
            android:id="@+id/swChannels"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:padding="8dp"
            android:text="@string/lbl_mono" />

        <Switch
            android:id="@+id/swSquareWave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lbl_square" />

        <Switch
            android:id="@+id/swInvertPulses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/lbl_invert_polarity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/tvAmplitude"
                style="@android:style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lbl_amplitude"
                android:textColor="@android:color/primary_text_light"
                tools:text="@string/lbl_amplitude" />

            <SeekBar
                android:id="@+id/sbAmplitude"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:max="9"
                android:min="2"
                android:progress="5"
                android:tickMark="@android:drawable/dark_header" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onConfirm"
                android:text="@string/btn_confirm" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onDefaults"
                android:text="@string/btn_defaults" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>